CHANGES

 - separate_y_chromosone_data available in lims
 - samplesheet driver for lims object
 - general tidy-up of the xml lims driver
 - logic for sample/study_publishable_name methods moved tost::api::lims wrapper

release 74.5
- order run_status_dict by temporal_index to display in Runs horizontal panel.  
- restrict statuses in menu for status editing to the statuses after the current status for all users
  other than those in the new analyst group, who can see all statuses.

release 74.4
 - memory leak fix in st::api::lims constructor - move metaprogramming out of the BUILD method

release 74.3
 - children method of the st::api::lims backed up by a lazy-built attribute;
   once children objects are created, their driver peers are cleared
 - new npg url is propagated through the package
 - use updated DBIx::Class::Schema::Loader
 - don't define new constructor now DBIC is Moosified: use BUILD

release 74.2
 - xml specific lims module, st::api::lims, is split into a generic lims wrapper,
   st::api::lims, and xml parser, st::api::lims::xml
 - a new parser/generator for Illumina-style samplesheets,
   npg_tracking::illumina::run::lims::samplesheet
 - bait finder update to cope with white space around bait name RT#334881
 - fixed test failures for Monitor::RunFolder::Staging by making the timeout
   the object is using variable and setting it to a small value in the test;
   this allows for testing a fresh clone

release 74.1
 - improvements and patches to tests
 - apache httpd conf file for running tracking server on centrally supported
   ubuntu precise vm
 - build script extended to deploy wtsi_local folder, which has apache conf files
 - in tests, explicitly clear existing db connection before resetting the tables and loading fixtures;
   otherwise, an very long wait (as set by GLOBAL wait_timeout ) occurs, see RT#336398
   for some reason this wait only occurs on MySQL servers v 5.5.30 and above