@@ -29,8 +29,8 @@
   </td>
  </tr>
  <tr id="batch">
-   <th>Batch id</th>
-   <td><input type="text" name="batch_id" id="batch_id" value="[% model.batch_id %]" size="9"/></td>
+   <th><span id="label4batch_id">Batch id</span></th>
+   <td><input type="text" name="batch_id" id="batch_id" value="[% model.batch_id %]" size="13"/></td>
  </tr>
  <tr id="paired_read_selecter">
    <th>Paired read?</th>
@@ -86,7 +86,7 @@
 </div>
 <div class="clearfloats"></div>
 
-<div id="ss_ajax_status""></div>
+<div id="ss_ajax_status"></div>
 <div id="ss_ajax_warning" style="display:none;background:#faa;width:600px;padding:5px;"></div>
 <div id="lane_definition">
 <table id="run_lanes">
@@ -149,6 +149,19 @@ function _instrument_is_miseq() {
  return false;
 }
 
+function _interpret_ean13_barcode(ean13){
+  var matcha = ean13.match(/^((\d{3})(\d+)(\d{2}))(\d)$/);
+  if(matcha){
+    var edata = matcha[1]; var echk = matcha[5];
+    var sum=0;
+    for (var i=1; i<=edata.length; i++) { sum += edata.charAt(edata.length - i) * (i%2 ? 3 : 1)}
+    sum%=10; if(sum){sum = 10 -sum}
+    if (sum != echk) return;
+    var spre = matcha[2]; var scode=matcha[3]; var schk=matcha[4];
+    return String.fromCharCode(matcha[2]/27+64)+String.fromCharCode(matcha[2]%27+64)+parseInt(matcha[3],10)+String.fromCharCode(matcha[4]);
+  }
+}
+
 function ajax_instrument_tilelayout(instr_is_ms){
  new Effect.Highlight('instrument_details');
  var dc=$$('span.default_columns');
@@ -183,9 +196,11 @@ function ajax_instrument(labelsArray){
        var instr_is_ms = _instrument_is_miseq();
        ajax_instrument_tilelayout(instr_is_ms);
        var label4flowcell = 'Flowcell';
-       if(instr_is_ms) { label4flowcell = 'Reagent kit'; }
+       var label4batch = 'Batch id';
+       if(instr_is_ms) { label4flowcell = 'Reagent kit'; label4batch = 'QC tube EAN13 or batch id' }
        $("label4flowcell_id").firstChild.nodeValue = label4flowcell + ' id';
-       $("validate_batch").value = 'Check ' + label4flowcell.toLowerCase() + ' or batch id';
+       $("label4batch_id").firstChild.nodeValue = label4batch;
+       $("validate_batch").value = 'Check ' + (instr_is_ms ? label4batch : (label4flowcell.toLowerCase() + ' or batch id'));
      }
    });
  }
@@ -203,13 +218,28 @@ function fetch_batch(e){
  }
  var url = 'http://psd-production.internal.sanger.ac.uk:6600/batches/';
 
- if(flowcell_id){
+ if(flowcell_id && ! _instrument_is_miseq()){
    url = url + 'find_batch_by_barcode/' + flowcell_id + '.xml';
  }else if(batch_id){
    url = url + batch_id + '.xml';
  }
  
- new Ajax.Request('[% SCRIPT_NAME %]/../reflector', {
+ if(batch_id.match(/^\d{13}$/)){
+  $('multiplex_run').checked = true;
+  $('paired_read').checked=true;
+  _update_read_cycle_row();
+  $('read_cycle_1').value = 25;
+  $('read_cycle_2').value = 8;
+  $('read_cycle_3').value = 25;
+  var barcode = _interpret_ean13_barcode(batch_id);
+  if(barcode){
+    $('ss_ajax_status').update('Tube barcode: ' + barcode);
+  }else{
+    $('ss_ajax_status').update('');
+    _ss_ajax_warning('Dodgy EAN13 barcode!');
+  }
+ }else{
+  new Ajax.Request('[% SCRIPT_NAME %]/../reflector', {
     requestHeaders: {Accept: 'application/xml, text/xml'},
     parameters: { url: url },
     onSuccess: function(transport){
@@ -276,7 +306,8 @@ function fetch_batch(e){
     onCreate: function(){ $('ss_ajax_status').update('<img style="height:16px;width:16px;" src="/prodsoft/npg/gfx/spinner.gif" alt="spinner" />Getting Sequencescape batch data...') },
     onFailure: function(){ _ss_ajax_warning('Something went wrong getting batch data from Sequencescape....') }   
   });
-  beginrefresh();
+ }
+ beginrefresh();
 }
 
 function _ss_ajax_warning(comment){
